@@ -36,6 +36,7 @@ Revision history for DBIx::Class
         - New ::Storage::DBI method last_dbh() - it will still return a
           newly connected $dbh if we start unconnected, but will not ping
           the server on every invocation unlike dbh()
+        - Some fixes of multi-create corner cases
         - Multiple POD improvements
 
 0.08108 2009-07-05 23:15:00 (UTC)
